2024-12-03T01:51:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12131419268 # 498
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
* notice: last 14d: unq all: 3 1699
* notice: prev accum: outdated-unq outdated-all / unq all: 2314 234098 / 2331 235872
* notice: next accum: outdated-unq outdated-all / unq all: 2315 234222 / 2332 235996
* notice: prev exec diff / last date diff / accum: unq all: +1 +124 -0 -75 / +1 +21 -0 -0 / 1 21
* notice: removed / changed dates: [2024-11-18] / [2024-11-19 2024-12-02 2024-12-03]

2024-12-02T01:53:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12111234346 # 497
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-02
* notice: last 14d: unq all: 3 1699
* notice: prev accum: outdated-unq outdated-all / unq all: 2313 233971 / 2330 235738
* notice: next accum: outdated-unq outdated-all / unq all: 2314 234098 / 2331 235872
* notice: prev exec diff / last date diff / accum: unq all: +1 +134 -0 -75 / +1 +20 -0 -0 / 1 20
* notice: removed / changed dates: [2024-11-17] / [2024-11-18 2024-12-01 2024-12-02]

2024-12-01T02:04:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12101331086 # 496
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-01
* notice: last 14d: unq all: 3 1692
* notice: prev accum: outdated-unq outdated-all / unq all: 2311 233843 / 2329 235626
* notice: next accum: outdated-unq outdated-all / unq all: 2313 233971 / 2330 235738
* notice: prev exec diff / last date diff / accum: unq all: +1 +112 -0 -75 / +1 +11 -0 -0 / 1 11
* notice: removed / changed dates: [2024-11-16] / [2024-11-17 2024-11-30 2024-12-01]

2024-11-30T01:46:09Z: