@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-21T01:46:10Z",
-  "count" : 126,
+  "timestamp" : "2024-12-04T01:51:39Z",
+  "count" : 50,
   "count_minmax" : [ 27, 126 ],
-  "count_decinc" : [ -0, +126 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -76, +126 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
