@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-03T01:51:12Z",
-  "count" : 21,
-  "count_minmax" : [ 21, 21 ],
-  "count_decinc" : [ -0, +21 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2024-12-04T01:51:39Z",
+  "count" : 126,
+  "count_minmax" : [ 21, 126 ],
+  "count_decinc" : [ -0, +126 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
