@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-12-03T01:51:12Z",
-  "count_outdated" : 234222,
-  "uniques_outdated" : 2315,
-  "count" : 235996,
-  "uniques" : 2332,
+  "timestamp" : "2024-12-04T01:51:39Z",
+  "count_outdated" : 234346,
+  "uniques_outdated" : 2316,
+  "count" : 236123,
+  "uniques" : 2334,
   "clones" : [
     {
-      "timestamp": "2024-11-19T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 25, 124 ],
-      "count_decinc": [ 75, 124 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-11-20T00:00:00Z",
-      "count": 126,
+      "count": 50,
       "count_minmax": [ 27, 126 ],
-      "count_decinc": [ 0, 126 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 76, 126 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-11-21T00:00:00Z",
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2024-12-03T00:00:00Z",
-      "count": 21,
-      "count_minmax": [ 21, 21 ],
-      "count_decinc": [ 0, 21 ],
+      "count": 126,
+      "count_minmax": [ 21, 126 ],
+      "count_decinc": [ 0, 126 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-12-04T00:00:00Z",
+      "count": 22,
+      "count_minmax": [ 22, 22 ],
+      "count_decinc": [ 0, 22 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
