@@ -1,3 +1,12 @@
+2024-12-04T01:51:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12151495237 # 499
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-04
+* notice: last 14d: unq all: 3 1701
+* notice: prev accum: outdated-unq outdated-all / unq all: 2315 234222 / 2332 235996
+* notice: next accum: outdated-unq outdated-all / unq all: 2316 234346 / 2334 236123
+* notice: prev exec diff / last date diff / accum: unq all: +2 +127 -1 -76 / +1 +22 -0 -0 / 1 22
+* notice: removed / changed dates: [2024-11-19] / [2024-11-20 2024-12-03 2024-12-04]
+
 2024-12-03T01:51:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12131419268 # 498
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
